--- a/pages/select-address/index.wxml
+++ b/pages/select-address/index.wxml
@@ -1,5 +1,5 @@
 <view class="container">
-  <view class="address-list" wx:if="{{addressList.length>0}}">
+  <view class="address-list" wx:if="{{addressList.length}}">
     <view class="address-item" wx:for-items="{{addressList}}"
           wx:key="{{index}}" bindtap="selectTap" data-id="{{item.addressId}}">
       <view class="name-tel">
@@ -23,7 +23,7 @@
       </view>
     </view>
   </view>
-  <view class="no-address" wx:if="{{addressList.length===0}}">
+  <view class="no-address" wx:if="{{!addressList.length}}">
     <image src="/images/no-address.png"></image>
     <view class="no-content-text">暂无绑定地址信息</view>
   </view>
