--- a/components/goods-list/index.wxml
+++ b/components/goods-list/index.wxml
@@ -6,7 +6,8 @@
         bindtap="toDetailsTap" data-id="{{item.goodsId}}">
     <view class="goods-item">
       <view class="img-box">
-        <image src="http://84c0a094.ngrok.io/market/file/preview?fileUrl={{item.fileUrls[0]}}" class="image" mode="aspectFill"/>
+        <!--<image src="http://84c0a094.ngrok.io/market/file/preview?fileUrl={{item.fileUrls[0]}}" class="image" mode="aspectFill"/>-->
+        <image src="http://www.xlzy520.cn/164_164/餐馆餐具.png" class="image" mode="aspectFill"/>
       </view>
       <view class="goods-detail">
         <view class="goods-title">{{item.goodsName}}</view>
