修改最大值，移除没用使用的样式

--- a/pages/goods-details/index.wxml
+++ b/pages/goods-details/index.wxml
@@ -57,7 +57,7 @@
     <image src="/images/goods-detail/shop-cart.png" class="join-shop-cart" bindtap="toAddShopCar"></image>
     <image src="/images/goods-detail/buy-now.png" class="now-buy" bindtap="tobuy"></image>
   </view>
-  <view class="show-popup" hidden="{{hideShopPopup}}" catchtouchmove="true">
+  <view class="show-popup" hidden="{{hideShopPopup}}">
     <view class="popup-mask" bindtap="closePopupTap"></view>
     <view class="popup-contents">
       <view class="pop-goods-info">
