--- a/pages/shop-cart/index.wxml
+++ b/pages/shop-cart/index.wxml
@@ -57,4 +57,84 @@
     </view>
   </view>
 
+  <view class="show-popup" hidden="{{hideShopPopup}}">
+    <view class="popup-mask" bindtap="closePopupTap"></view>
+    <view class="popup-contents">
+      <view class="pop-goods-info">
+        <view class="pop-img-box">
+          <!--          <image src="{{goodsDetail.fileUrls[0]}}" class="goods-thumbnail"/>-->
+          <image src="http://www.xlzy520.cn/750_600/餐馆餐具.png" class="goods-thumbnail"/>
+        </view>
+        <view class="pop-goods-des">
+          <view class="pop-goods-title">{{goodsDetail.goodsName}}</view>
+          <view class="goods-rule" hidden="{{!goodsDetail.specsList[0].specsStr}}">({{goodsDetail.specsList[0].specsStr}})</view>
+          <view class="pop-goods-price">
+            <view class="row goods-price">
+              <view class="price-money">¥</view>
+              <view class="price">{{selectSizePrice}}</view>
+              <view class="price-unit">/{{goodsDetail.pack?'套':'件'}}</view>
+            </view>
+          </view>
+          <view class="pop-goods-guige-select"
+                wx:if="{{goodsDetail.useType==='幼儿园餐具'}}">
+            {{selectSpecLabel?'(已选择：'+selectSpecLabel+')':'请选择规格分类'}}</view>
+        </view>
+        <view class="pop-goods-close" bindtap="closePopupTap"></view>
+      </view>
+      <view class="goods-guige" wx:if="{{goodsDetail.useType==='幼儿园餐具'}}">
+        <view class="left-title">餐具规格</view>
+        <view class="right-content">
+          <view class="guige-item {{specSelected===item.specsId?'active': ''}}"
+                wx:for="{{goodsDetail.specsList}}" wx:key="item.specsId"
+                data-id="{{item.specsId}}" data-specsname="{{item.specsName}}"
+                data-price="{{item.price}}" bindtap="selectSpec">
+            {{item.specsName}} : {{item.specsStr}}
+          </view>
+        </view>
+      </view>
+      <view class="jiu-can-box jiu-can-ci-shu"
+            wx:if="{{goodsDetail.useType!=='餐馆餐具'&&goodsDetail.useType!=='宴席餐具'}}">
+        <view class="num-label">就餐次数</view>
+        <view class="ci-shu-tag-wrap">
+          <view class="ci-shu-tag {{eatNum===item.value?'active':''}}" wx:for="{{eatNumTag}}" wx:key="item.label"
+                bindtap="selectEatNumTag" data-num="{{item.value}}" data-label="{{item.label}}">{{item.label}}</view>
+        </view>
+      </view>
+      <view class="jiu-can-box jiu-can-ren-shu"
+            wx:if="{{goodsDetail.useType!=='餐馆餐具'&&goodsDetail.useType!=='宴席餐具'}}">
+        <view class="num-label">就餐人数</view>
+        <view class="num-box">
+          <view class="num-jian {{peopleNum == buyNumMin ? 'hui': ''}}" bindtap="numJianTap" data-type="peopleNum">-</view>
+          <view class="num-input">
+            <input type="number" value="{{peopleNum}}"/>
+          </view>
+          <view class="num-jia {{peopleNum== buyNumMax ? 'hui': ''}}" bindtap="numJiaTap" data-type="peopleNum">+</view>
+        </view>
+      </view>
+      <view class="jiu-can-box jiu-can-tian-shu"
+            wx:if="{{goodsDetail.useType!=='餐馆餐具'&&goodsDetail.useType!=='宴席餐具'}}">
+        <view class="num-label">就餐天数</view>
+        <view class="num-box">
+          <view class="num-jian {{eatDay === buyNumMin ? 'hui': ''}}" bindtap="numJianTap" data-type="eatDay">-</view>
+          <view class="num-input">
+            <input type="number" value="{{eatDay}}"/>
+          </view>
+          <view class="num-jia {{eatDay== buyNumMax ? 'hui': ''}}" bindtap="numJiaTap" data-type="eatDay">+</view>
+        </view>
+      </view>
+      <view class="jiu-can-box buy-num"
+            wx:if="{{goodsDetail.useType==='餐馆餐具'||goodsDetail.useType==='宴席餐具'}}">
+        <view class="num-label">购买数量(件)</view>
+        <view class="num-box">
+          <view class="num-jian {{quantity === buyNumMin ? 'hui': ''}}" bindtap="numJianTap" data-type="quantity">-</view>
+          <view class="num-input">
+            <input type="number" value="{{quantity}}"/>
+          </view>
+          <view class="num-jia {{quantity== buyNumMax ? 'hui': ''}}" bindtap="numJiaTap" data-type="quantity">+</view>
+        </view>
+      </view>
+      <view class="popup-join-btn" bindtap="popupOk">确定</view>
+    </view>
+  </view>
+
 </view>
