--- a/pages/to-pay-order/index.wxml
+++ b/pages/to-pay-order/index.wxml
@@ -10,8 +10,8 @@
           <view class="mobile">{{curAddressData.mobile}}</view>
         </view>
         <view class="row">
-          <image class="address-type" src="/images/useType/{{curAddressData.addressType?'school':'canguan'}}.png"></image>
-          <view class="addr-text">{{curAddressData.address}}</view>
+          <image class="address-type" src="/images/useType/{{curAddressData.addressType?'canguan':'school'}}.png"></image>
+          <view class="addr-text">{{curAddressData.address||curAddressData.schoolName}}</view>
         </view>
         <image class="arrow-right" src="/images/arrow-right.png"></image>
       </view>
@@ -34,7 +34,7 @@
           </view>
           <view class="num-detail">
             <view class="num-detail-row" wx:if="{{item.useType!=='餐馆餐具'&&item.useType!=='宴席餐具'&&item.useType!=='幼儿园餐具'}}">
-              <view class="ji-can">{{item.eatNumLabel}}</view>
+              <view class="ji-can">{{eatNumTag[item.eatNum]}}</view>
               <view class="ji-suan-shi">{{item.peopleNum}}人 * {{item.eatDay}} 天 = {{allGoodsPrice}}</view>
             </view>
           </view>
@@ -58,4 +58,5 @@
       <button class="to-pay-btn" formType="submit">提交订单</button>
     </view>
   </form>
+  <dialog wx:if="{{tipText}}" type="add-address" text="请添加地址" bindclose="close"></dialog>
 </view>
