--- a/pages/shop-cart/index.wxml
+++ b/pages/shop-cart/index.wxml
@@ -77,60 +77,60 @@
     <view class="popup-contents">
       <view class="pop-goods-info">
         <view class="pop-img-box">
-          <!--          <image src="{{shopList[index].fileUrls[0]}}" class="goods-thumbnail"/>-->
+          <!--          <image src="{{currentShop.fileUrls[0]}}" class="goods-thumbnail"/>-->
           <image src="http://www.xlzy520.cn/750_600/餐馆餐具.png" class="goods-thumbnail"/>
         </view>
         <view class="pop-goods-des">
-          <view class="pop-goods-title">{{shopList[index].goodsName}}</view>
-          <view class="goods-rule" hidden="{{!shopList[index].specsList[0].specsStr}}">({{shopList[index].specsList[0].specsStr}})</view>
+          <view class="pop-goods-title">{{currentShop.goodsName}}</view>
+          <view class="goods-rule" hidden="{{!currentShop.specsList[0].specsStr}}">({{currentShop.specsList[0].specsStr}})</view>
           <view class="pop-goods-price">
             <view class="row goods-price">
               <view class="price-money">¥</view>
-              <view class="price">{{shopList[index].priceStr}}</view>
-              <view class="price-unit">/{{shopList[index].pack?'套':'件'}}</view>
+              <view class="price">{{currentShop.priceStr}}</view>
+              <view class="price-unit">/{{currentShop.pack?'套':'件'}}</view>
             </view>
           </view>
         </view>
         <view class="pop-goods-close" bindtap="closePopupTap"></view>
       </view>
-      <view class="jiu-can-box jiu-can-ci-shu" wx:if="{{!shopList[index].pack}}">
+      <view class="jiu-can-box jiu-can-ci-shu" wx:if="{{!currentShop.pack}}">
         <view class="num-label">就餐次数</view>
         <view class="ci-shu-tag-wrap">
-          <view class="ci-shu-tag {{shopList[index].eatNum===item.value?'active':''}}" wx:for="{{eatNumTag}}" wx:key="item.label"
-                bindtap="selectEatNumTag" data-index="{{index}}" data-label="{{item}}">{{item}}</view>
+          <view class="ci-shu-tag {{currentShop.eatNumLabel===item?'active':''}}" wx:for="{{eatNumTag}}" wx:key="item.label"
+                bindtap="selectEatNumTag" data-label="{{item}}">{{item}}</view>
         </view>
       </view>
-      <view class="jiu-can-box jiu-can-ren-shu" wx:if="{{!shopList[index].pack}}">
+      <view class="jiu-can-box jiu-can-ren-shu" wx:if="{{!currentShop.pack}}">
         <view class="num-label">就餐人数</view>
         <view class="num-box">
-          <view class="num-jian {{shopList[index].peopleNum == 1 ? 'hui': ''}}" bindtap="numJianTap" data-type="peopleNum">-</view>
+          <view class="num-jian {{currentShop.peopleNum == 1 ? 'hui': ''}}" bindtap="numJianTap" data-type="peopleNum">-</view>
           <view class="num-input">
-            <input type="number" value="{{shopList[index].peopleNum}}"/>
+            <input type="number" value="{{currentShop.peopleNum}}"/>
           </view>
-          <view class="num-jia {{peopleNum== 9999 ? 'hui': ''}}" bindtap="numJiaTap" data-type="peopleNum">+</view>
+          <view class="num-jia {{currentShop.peopleNum== 9999 ? 'hui': ''}}" bindtap="numJiaTap" data-type="peopleNum">+</view>
         </view>
       </view>
-      <view class="jiu-can-box jiu-can-tian-shu" wx:if="{{!shopList[index].pack}}">
+      <view class="jiu-can-box jiu-can-tian-shu" wx:if="{{!currentShop.pack}}">
         <view class="num-label">就餐天数</view>
         <view class="num-box">
-          <view class="num-jian {{shopList[index].eatDay === 1 ? 'hui': ''}}" bindtap="numJianTap" data-type="eatDay">-</view>
+          <view class="num-jian {{currentShop.eatDay === 1 ? 'hui': ''}}" bindtap="numJianTap" data-type="eatDay">-</view>
           <view class="num-input">
-            <input type="number" value="{{shopList[index].eatDay}}"/>
+            <input type="number" value="{{currentShop.eatDay}}"/>
           </view>
-          <view class="num-jia {{eatDay== 31 ? 'hui': ''}}" bindtap="numJiaTap" data-type="eatDay">+</view>
+          <view class="num-jia {{currentShop.eatDay== 31 ? 'hui': ''}}" bindtap="numJiaTap" data-type="eatDay">+</view>
         </view>
       </view>
-      <view class="jiu-can-box buy-num" wx:if="{{shopList[index].pack}}">
+      <view class="jiu-can-box buy-num" wx:if="{{currentShop.pack}}">
         <view class="num-label">购买数量(件)</view>
         <view class="num-box">
-          <view class="num-jian {{shopList[index].quantity === 1 ? 'hui': ''}}" bindtap="numJianTap" data-type="quantity">-</view>
+          <view class="num-jian {{currentShop.quantity === 1 ? 'hui': ''}}" bindtap="numJianTap" data-type="quantity">-</view>
           <view class="num-input">
-            <input type="number" value="{{shopList[index].quantity}}"/>
+            <input type="number" value="{{currentShop.quantity}}"/>
           </view>
-          <view class="num-jia {{quantity== 9999 ? 'hui': ''}}" bindtap="numJiaTap" data-type="quantity">+</view>
+          <view class="num-jia {{currentShop.quantity== 9999 ? 'hui': ''}}" bindtap="numJiaTap" data-type="quantity">+</view>
         </view>
       </view>
-      <view class="popup-join-btn" bindtap="popupOk">确定</view>
+      <view class="popup-join-btn" bindtap="confirmChange">确定</view>
     </view>
   </view>
 
